fix: add missing colors tweak

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -112,6 +112,10 @@
   color: var(--black-500) !important;
 }
 
+.button_adcaac.buttonColor_adcaac.buttonActive_adcaac .lottieIcon_f73ef7 /** sidebar (connected to voice channel) > share your screen (active) */ {
+  --__lottieIconColor: currentcolor !important;
+}
+
 /*
  * Dropdown menus
  */
